--- a/content/index.html
+++ b/content/index.html
@@ -17,6 +17,7 @@
         </style>
     </head>
     <body>
+        <!-- TESTING add comment -->
         <h3>Welcome back to iChat</h3>
         <ul id="messages"></ul>
         <form id="form" action="">
