--- a/content/chatroom.html
+++ b/content/chatroom.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>iChat</title>
+        <title>Chat - Chatlist</title>
         <style>
             body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
       
