--- a/content/login.html
+++ b/content/login.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Chat - Login</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
@@ -68,7 +70,7 @@
                     }
                 },
                 success: function(data){
-                    window.location = '/chatroom.html';
+                    window.location = '/chatlist.html';
                 }                
             });
         });
@@ -95,7 +97,7 @@
                     }
                 },
                 success: function(){
-                    window.location = '/chatroom.html';
+                    window.location = '/chatlist.html';
                 }
             });
         }
