update update personal information in chatlist page

--- a/content/chatlist.html
+++ b/content/chatlist.html
@@ -29,6 +29,14 @@
                 <input type="text" placeholder="chatroom name" required id="chatroomName" minlength="1" maxlength="32">
                 <button type="submit">create</button>
             </form>
+
+            <!-- Update personal info -->
+            <h3>Update username</h3>
+            <form id="updateName">
+                <input required type="text" maxlength="32" minlength="1" name="username" pattern="[a-z0-9]+" id="update-username" placeholder="username: Eng small letter & number only (Characters: Max: 32, Min: 1)"></input>
+                <input required type="password" name="password" minlength="6" maxlength="16" id="password" placeholder="Password: (Characters: Max: 16, Min: 6)">
+                <button type="submit">confirm</button>
+            </form>
         </div>
     </body>
     <script>
@@ -107,5 +115,36 @@
                 }
             });
         });
+
+        $('#updateName').submit(function (event){
+            event.preventDefault();
+            var data = {
+                username: $('#update-username').val(),
+                password: $('#password').val(),
+            }
+            
+            $.ajax
+            ({
+                type: "PATCH",
+                url: "/users/update",
+                contentType: 'application/json; charset=utf-8',
+                dataType: 'json',
+                async: false,
+                data: JSON.stringify(data),
+                headers: {
+                    "authorization": "Bearer " + getCookie('chatJWT')
+                },
+                error:function(data){
+                    if(data.status === 400){
+                        alert(data.responseJSON.message);
+                    }else{
+                        alert('Incorrect password');
+                    }
+                },
+                success:function(data) {
+                    window.location = '/chatlist.html';
+                }
+            });
+        })
     </script>
 </html>
