--- a/content/chatlist.html
+++ b/content/chatlist.html
@@ -145,6 +145,10 @@
                     window.location = '/chatlist.html';
                 }
             });
-        })
+        });
+
+        $('#chatlist li').click(function(){
+            window.location = '/chatroom.html?chatroom=' + $(this).attr('data-id');
+        });
     </script>
 </html>
