add socket io basic

--- a/content/chatroom.html
+++ b/content/chatroom.html
@@ -196,6 +196,21 @@
                 }
             });
         });
+
+        var currentUser = urlParams.get('user');
+        const socket = io({query: "username=" + currentUser}); 
+        
+        var form = document.getElementById('form');
+        var input = document.getElementById('input');
+
+        form.addEventListener('submit', function(e) {
+            e.preventDefault();
+            if (input.value) {
+            socket.emit('chat message', input.value);
+            input.value = '';
+            }
+        });
+
         /*const socket = io(); 
         var form = document.getElementById('form');
         var input = document.getElementById('input');
