--- a/content/login.html
+++ b/content/login.html
@@ -4,17 +4,95 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Chat - Login</title>
+        <title>Beacon - Login</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <style>
+            /* Common */
+            * {font-family: Inter, sans-serif; margin: 0px;}
+            body {background-color: #1c98f7; margin: 0px;}    
+            .clear {clear: both;}
+            input { height: 35px; border-radius: 10px; border-color: #d2d2d7; }
+            input:focus { outline: none; border-color: #1c98f7; box-shadow: 0 0 0 2px #1c98f7;}
+            form p {margin: 20px 0px 2px 0px; font-size: 14px;}
+            ul {padding: 0px; margin-right: 55px;}
+            li {list-style: none;}
+
+            /* keyframes */
+            @keyframes icon {
+                0% { transform: translateX(-10px); }
+                80% { transform: translateX(2px); }
+                100% { transform: translateX(0px); }
+            }
+
+            @keyframes login {
+                0% { transform: translateY(-15px); opacity: 0; }
+                100% { transform: translateY(0px);  opacity: 100; }
+            }
+
+            @keyframes customBTN {
+                0% { transform: scale(1);}
+                100% { transform: scale(1.05); box-shadow: 3px 3px 10px black;}
+            }
+
+            /* Header */
+            .loginHeader { background-color: white; padding : 30px 0px 55px 20px;  }
+            .loginHeader div {animation-name: icon; animation-duration: 1.5s;}
+            .loginHeader * {float: left;}
+            .loginHeader::after {  content: ""; clear: both; display: table; }
+            .loginHeader h1 { margin : 0 0 0 15px; line-height: 55px;}
+            .chatIcon {height: 55px; }
+
+            /* content container */
+            .pageContainer { max-width: 950px; margin: 0 auto; margin-top: -25px; padding: 55px 15px; background-color: #f6fafb; border-radius: 10px; }
+            .pageContainer div { width: 420px; margin: 0 auto;}
+            .loginPage input { width: 350px;}
+
+            /* Login */
+            .loginContainer { margin-top: 25px; padding: 0px 120px; animation-name: login; animation-duration: 1s;}
+            .loginPage .loginBtn { width: 350px; margin: 0px; padding: 5px 0px; height: 35px; position: relative; margin-top: 15px;}
+            .loginBtn .button {width: calc(50% - 25px); margin-right: 15px; font-size: 14px; border-color: #1c98f7; border-radius: 10px; background-color: #1c98f7; color : white; line-height: 35px; cursor: pointer; box-shadow: 1px 1px 10px black;}
+            .button:hover {animation-name: customBTN; animation-duration: 0.5s; animation-fill-mode: forwards;}
+            
+            /* Signup */
+            .singupContainer {display: none;}
+
+            /* footer */
+            .footer {margin-top: 50px; background-color: #000b21; width: 100%; padding: 35px 0px;}
+            .footer .container {width: 70%; margin: 0 auto;}
+            .footer .container * {color: white;}
+            .footer .container div{float: left;}
+            .footer .container::after {content: ''; clear: both; display: table;}
+            .footer .left {width: 40%;}
+            .footer .right {width: 60%;}
+
+            @media only screen and (max-width: 700px){
+                .pageContainer div { margin: 0px; padding: 0px;}
+            }
+        </style>
     </head>
-    <body>
+    <body class="loginPage">
+        <div class="loginHeader">
+            <div>
+                <img class="chatIcon" src="imgDB/chat_icon.png" />
+                <h1>Beacon</h1>
+            </div>
+        </div>
+
         <div class="pageContainer">
             <div class="loginContainer">
-                <h2>Login First!</h2>
+                <h2>Log In</h2>
                 <form id="loginForm" action="">
-                    <input type="text" required maxlength="32" minlength="1" name="username" id="login-username" placeholder="Username: ..."></input>
-                    <input type="password" required minlength="6" maxlength="16" name="password" id="login-password" placeholder="Password: ..."></input>
-                    <button type="submit">submit</button>
+                    <p>Username:</p>
+                    <input type="text" required maxlength="32" minlength="1" name="username" id="login-username" placeholder="Enter your username:"></input>
+
+                    <p>Password:</p>
+                    <input type="password" required minlength="6" maxlength="16" name="password" id="login-password" placeholder="Enter your password:"></input>
+                    
+                    <div class="errorMsg"></div>
+                    <div class="loginBtn">
+                        <button type="submit" class="loginSubmit button">submit</button>
+                        <button type="button" class="button">Register</button>
+                    </div>
                 </form>
             </div>
             <div class="singupContainer">
@@ -28,6 +106,51 @@
                     <input required type="phone" name="phoneNo" id="phoneNo" placeholder="Phone: ..."></input>
                     <button type="submit" disabled="true" id="signupBtn">submit</button>
                 </form>
+            </div>    
+        </div>
+
+        <div class="footer">
+            <div class="container">
+            <div class="left">
+                <div> 
+                    <span class="copyright">© 2013–2021 Beacon, a 501c3 nonprofit.</span><br> 
+                    Beacon is a registered trademark in the United States and other countries. <br> <br> 
+                    For media inquiries, contact <a href="#">info@beacon.org</a></div>
+            </div>
+
+            <div class="right">
+                <div class="container">
+                    <div class="columns">
+                            <div class="column"> 
+                                <strong>Company</strong>
+                                <ul>
+                                    <li> <a href="#">Donate</a></li>
+                                    <li> <a href="#">Careers</a></li>
+                                    <li> <a href="#">Blog</a></li>
+                                    <li> <a href="#">Terms &amp; Privacy Policy</a></li>
+                                </ul>
+                            </div>
+                            <div class="column"> 
+                                <strong>Download</strong>
+                                <ul>
+                                    <li> <a href="#">Android</a></li>
+                                    <li> <a href="#">iPhone &amp; iPad</a></li>
+                                    <li> <a href="#">Windows</a></li>
+                                    <li> <a href="#">Mac</a></li>
+                                    <li> <a href="#">Linux</a></li>
+                                </ul>
+                            </div>
+                            <div class="column"> 
+                                <strong>Social</strong>
+                                <ul>
+                                    <li> <a href="#" target="_blank">GitHub</a></li>
+                                    <li> <a href="#" target="_blank">Twitter</a></li>
+                                    <li> <a href="#" target="_blank">Instagram</a></li>
+                                </ul>
+                            </div>
+                    </div>
+                </div>
+            </div>
             </div>
         </div>
     </body>
