--- a/content/chatlist.html
+++ b/content/chatlist.html
@@ -37,7 +37,7 @@
             .userInfo .moreBtn {font-size: 12px; text-align: center; margin-bottom: 3px; cursor: pointer;}
 
             /* create chat */
-            .createChatBtn {display: block; text-align: center; color: blue; cursor: pointer; padding: 5px 0px;}
+            .createChatBtn {display: block; text-align: center; color: blue; cursor: pointer; padding: 5px 0px; margin-top: 5px;}
             .createChatContainer {display: none; text-align: center; padding: 10px 0px;}
 
             /* chatroom */
