--- a/content/chatlist.html
+++ b/content/chatlist.html
@@ -32,7 +32,7 @@
             .userInfo .userID { font-size: 22px; font-weight: 500; vertical-align: top;  line-height: 35px; width: calc(100% - 113px); text-align:center; display: inline-block;}
             .userInfo .moreInfo {display: none; margin: 0 auto; width: 350px;}
             .userInfo .moreInfo h3 {border-top: 1px solid #EFEFEF; margin-top: 10px; padding-top: 10px;}
-            .userInfo .logout { float: right; line-height: 35px; display: inline-block; padding: 0px 8px; background-color: #1c98f7; color: white; cursor: pointer; border-radius: 15px;}
+            .userInfo .logout {line-height: 35px; padding: 0px 8px; float: right; background-color: #1c98f7; color: white; cursor: pointer; border-radius: 15px;}
             .userInfo .logout:hover {animation-name: changeColorBlue; animation-duration: 2s;}
             .userInfo .moreBtn {font-size: 12px; text-align: center; margin-bottom: 3px; cursor: pointer;}
 
